--- a/新视角生成.md
+++ b/新视角生成.md
@@ -55,7 +55,7 @@ mast3r和pow3r分别新增colmap_match 脚本，从输入的16张图像中构造
 
 
 
-### 结果展示
+### 渲染结果展示
 结果存放在output.zip文件中。3dgs ply文件放置于output/ply下， 渲染图片放置于output/splatting下
 
 **mast3r**
