--- a/新视角生成.md
+++ b/新视角生成.md
@@ -56,7 +56,7 @@ mast3r和pow3r分别新增colmap_match 脚本，从输入的16张图像中构造
 
 
 ### 渲染结果展示
-结果存放在output.zip文件中。3dgs ply文件放置于output/ply下， 渲染图片放置于output/splatting下
+3dgs结果存放在output.zip文件中。
 
 **mast3r**
 
@@ -69,7 +69,9 @@ mast3r和pow3r分别新增colmap_match 脚本，从输入的16张图像中构造
 <!-- 这是一张图片，ocr 内容为： -->
 ![](https://cdn.nlark.com/yuque/0/2026/png/58377837/1768747067114-4bd2d35a-5486-4d08-b8a4-ab2a5b2cfd21.png)
 
-**pow3r **
+**pow3r**
+
+之所以是渲染结果是横向的，是因为pow3r的模型输入要求图像为横向的（宽大于高），所以之后经一系列的输出比如相机内参和3dgs输入的图像也都是经过转置的。
 
 <!-- 这是一张图片，ocr 内容为： -->
 ![](https://cdn.nlark.com/yuque/0/2026/png/58377837/1768742739728-a1246f97-8577-4130-9b12-b85c5fc5a65d.png)
